# scratchstack-aws-signature

./: .gitignore  .rustfmt.toml  Cargo.toml  LICENSE-MIT  README.md  coverage  coverage-fixup.py  coverage-report.sh  coverage-run.py  coverage-run.sh  coverage-show.sh  rustfmt.toml
.github/: FUNDING.yml
.github/actions-rs/: grcov.yml
.github/workflows/: rust.yml
base-library/: Cargo.toml
base-library/src/: auth.rs  aws4.rs  canonical.rs  chronoutil.rs  crypto.rs  error.rs  hmac.rs  lib.rs  signature.rs  signing_key.rs  unittest.rs
fuzz/: dict.txt
fuzz/fuzz_targets/: signature.rs
hyper-integration/: Cargo.toml
hyper-integration/src/: lib.rs  service.rs
src/: async_spooled_tempfile.rs  auth.rs  aws4.rs  body.rs  buffered_body.rs  canonical.rs  chronoutil.rs  constants.rs  crypto.rs  error.rs  hmac.rs  lib.rs  migration.rs  principal.rs  signature.rs  signing_key.rs  unittest.rs
src/fuzz/: Cargo.toml
tests/: aws4.rs
