[package]
name = "scratchstack-aws-signature"
version = "0.11.1-preview.5"
authors = ["David Cuthbert <dacut@kanga.org>"]
description = "AWS SigV4 signature verification"
keywords = ["AWS", "Amazon"]
homepage = "https://github.com/dacut/scratchstack-aws-signature"
repository = "https://github.com/dacut/scratchstack-aws-signature"
license = "MIT"
edition = "2021"
exclude = ["tests/*"]
readme = "README.md"

[lib]
name = "scratchstack_aws_signature"

[features]
default = []
unstable = []

[dependencies]
async-trait = "^0.1"
bytes = "^1.6"
chrono = { version = "^0.4", default-features = false, features = [ "std" ] }
derive_builder = "^0.20"
encoding = "^0.2"
futures = "^0.3"
hex = "^0.4"
hmac = "^0.12"
http = "^1.1"
hyper = "^1.4"
lazy_static = "^1.5"
log = "^0.4"
regex = "^1.10"
sha2 = "^0.10"
scratchstack-arn = "^0.4.9"
scratchstack-aws-principal = "^0.4.9"
scratchstack-errors = "^0.4.9"
subtle = "^2.6"
tower = { version = "^0.4", features = [ "util" ] }
qualifier_attr = "0.2.2"

[dev-dependencies]
env_logger = "^0.11"
tokio = { version = "^1.38", features = [ "macros", "rt" ] }
tokio-test = "^0.4"
test-log = "0.2"
