[package]
name = "scratchstack-aws-signature"
version = "0.12.0"
authors = ["David Cuthbert <dacut@kanga.org>"]
description = "AWS SigV4 signature verification"
keywords = ["AWS", "Amazon"]
homepage = "https://github.com/dacut/scratchstack-aws-signature"
repository = "https://github.com/dacut/scratchstack-aws-signature"
license = "MIT"
edition = "2021"
exclude = ["tests/*"]
readme = "README.md"

[lib]
name = "scratchstack_aws_signature"

[features]
default = ["streaming"]
unstable = []
streaming = ["tokio", "hyper", "http-body-util", "tempfile"]

[dependencies]
bytes = "^1.10.1"
chrono = { version = "^0.4.41", default-features = false, features = [] }
derive_builder = "^0.20.2"
encoding = "^0.2.33"
hex = "^0.4.3"
hmac = "^0.12.1"
http = "^1.3.1"
lazy_static = "^1.5.0"
log = "^0.4.27"
qualifier_attr = "0.2.2"
regex = "^1.11.2"
sha2 = "^0.10.9"
scratchstack-aws-principal = "^0.4.9"
scratchstack-errors = "^0.4.9"
subtle = "^2.6.1"
tower = { version = "^0.5.2", features = ["util"] }
tokio = { version = "^1.47.1", features = [
    "fs",
    "io-std",
    "io-util",
    "rt-multi-thread",
], optional = true }
hyper = { version = "1.7.0", optional = true }
http-body-util = { version = "0.1.3", optional = true }
tempfile = { version = "3.23.0", optional = true }

[dev-dependencies]
env_logger = "^0.11.8"
tokio = { version = "^1.47.1", features = ["macros", "rt"] }
tokio-test = "^0.4"
test-log = "0.2"

hyper = { version = "1.7.0", features = ["http1", "server"] }
