[package]
name = "scratchstack-aws-signature"
version = "0.10.2"
authors = ["David Cuthbert <dacut@kanga.org>"]
description = "AWS SigV4 signature verification"
keywords = ["AWS", "Amazon"]
homepage = "https://github.com/dacut/scratchstack-aws-signature"
repository = "https://github.com/dacut/scratchstack-aws-signature"
license = "MIT OR Apache-2.0"
edition = "2018"
exclude = ["tests/*"]
readme = "../README.md"

[lib]
name = "scratchstack_aws_signature"

[dependencies]
async-trait = "^0.1"
chrono = "^0.4"
hex = "^0.4"
http = "^0.2"
lazy_static = "^1.4.0"
log = "^0.4"
regex = "^1.6"
ring = "^0.16"
scratchstack-arn = { verison = "^0.4", path = "../../scratchstack-core/arn" }
scratchstack-aws-principal = { version = "^0.4", path = "../../scratchstack-core/principal" }
tower = { version = "0.4", features = [ "util" ] }

[dev-dependencies]
env_logger = "^0.9"
tokio = { version = "^1.21", features = [ "macros", "rt" ] }
test-log = "0.2"