[package]
name = "scratchstack-aws-signature"
description = "AWS SigV4 signature verification"
keywords = ["AWS", "Amazon"]

authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
version.workspace = true

[lib]
name = "scratchstack_aws_signature"

[dependencies]
async-trait = "^0.1"
chrono = "^0.4"
hex = "^0.4"
http = "^1.0"
lazy_static = "^1.5.0"
log = "^0.4"
regex = "^1.10"
ring = "^0.16"
scratchstack-aws-principal = { version = "^0.3.3", features = ["service"] }
subtle = "2.6.1"
tower = { version = "0.4", features = [ "util" ] }

[dev-dependencies]
env_logger = "^0.11"
tokio = { version = "^1.4", features = [ "macros", "rt" ] }
tokio-test = "^0.4"
test-log = "0.2"
