[package]
name = "scratchstack-aws-signature-hyper"
description = "AWS SigV4 signature verification integration with Hyper"
keywords = ["AWS", "Amazon", "Hyper"]
version = "0.10.3"
authors = ["David Cuthbert <dacut@kanga.org>"]
homepage = "https://github.com/dacut/scratchstack-aws-signature"
repository = "https://github.com/dacut/scratchstack-aws-signature"
edition = "2018"
license = "MIT OR Apache-2.0"
readme = "../README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "^0.4"
futures = "^0.3"
log = "^0.4"
http = "^0.2"
http-body = "^0.4"
hyper = { version = "^0.14", features = [ "server", "stream", "tcp", "http1", "http2" ] }
scratchstack-aws-principal = "^0.3"
scratchstack-aws-signature = { version = "^0.10", path = "../base-library/" }
tokio = { version = "^1.4", features = [ "macros", "rt" ] }
tower = { version = "^0.4", features = [ "buffer" ]}

[dev-dependencies]
env_logger = "^0.8"
hyper = { version = "^0.14", features = [ "client", "server", "stream", "tcp", "http1", "http2" ] }
rusoto_core = "^0.46"
rusoto_credential = "^0.46"
rusoto_signature = "^0.46"
test-env-log = "^0.2"
